--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-load-plugins": "^1.1.0",
     "gulp-minify-css": "^1.2.2",
     "gulp-plumber": "^1.0.1",
     "gulp-uglify": "^1.5.1"
